# youtube-lookup

./: Cargo.toml  Dockerfile  README.md
src/: errors.rs  main.rs  models.rs
src/api/: error.rs  handlers.rs  mod.rs  types.rs
src/youtube/: channels.rs  mod.rs  playlist_items.rs  subscriptions.rs  videos.rs
src/youtubei/: browse.rs  mod.rs  resolve_url.rs
static/: index.html
