[package]
name = "youtube-lookup"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing-appender = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
async-channel = "2.3.1"
thiserror = "2.0.9"
hyper = "1.5.0"
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.9", features = ["full"] }
native-tls = "0.2.12"
rand = "0.8.5"
http-body-util = "0.1.2"
prost = "0.13.4"
reqwest = { version = "0.12.9", features = ["json", "native-tls"] }
tempfile = "3.14.0"
parking_lot = "0.12.3"
chrono = "0.4.39"
axum = "0.7.9"
dotenvy = "0.15"